--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ pillow = "*"
 psycopg2-binary = "*"
 django-braces = "*"
 django-embed-video = "*"
+python-memcached = "*"
+django-memcache-status = "*"
 
 [dev-packages]
 autopep8 = "*"
