--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-embed-video = "*"
 python-memcached = "*"
 django-memcache-status = "*"
 djangorestframework = "*"
+requests = "*"
 
 [dev-packages]
 autopep8 = "*"
