--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ python-memcached = "*"
 django-memcache-status = "*"
 djangorestframework = "*"
 requests = "*"
+channels = "==2.4.0"
 
 [dev-packages]
 autopep8 = "*"
