--- a/Pipfile
+++ b/Pipfile
@@ -14,9 +14,11 @@ django-memcache-status = "*"
 djangorestframework = "*"
 requests = "*"
 channels = "==2.4.0"
+channels-redis = "==2.4.2"
 
 [dev-packages]
 autopep8 = "*"
+django-extensions = "*"
 
 [requires]
 python_version = "3.8"
