--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ djangorestframework = "*"
 requests = "*"
 channels = "==2.4.0"
 channels-redis = "==2.4.2"
+uwsgi = "==2.0.18"
 
 [dev-packages]
 autopep8 = "*"
