--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,6 +5,11 @@ upstream elearning {
 
 server {
     listen 80;
+    listen 443 ssl; 
+    
+    ssl_certificate /home/blessed/Workspace/Django/e_learning/config/ssl/e_learning.crt;
+    ssl_certificate_key /home/blessed/Workspace/Django/e_learning/config/ssl/e_learning.key;
+
     server_name www.elearning.com elearning.com;
 
     access_log /home/blessed/Workspace/Django/e_learning/config/logs/nginx_access.log;
