configure django for ssl/tls & redirect http to https

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,8 +5,13 @@ upstream elearning {
 
 server {
     listen 80;
+    server_name www.elearning.com elearning.com;
+    return 301 https://elearning.com$request_uri;
+}
+
+server {
     listen 443 ssl; 
-    
+
     ssl_certificate /home/blessed/Workspace/Django/e_learning/config/ssl/e_learning.crt;
     ssl_certificate_key /home/blessed/Workspace/Django/e_learning/config/ssl/e_learning.key;
 
