configure daphne and secure websockets

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,6 +3,10 @@ upstream elearning {
     server unix:///tmp/e_learning.sock;
 }
 
+upstream daphne {
+    server unix:///tmp/daphne.sock;
+}
+
 server {
     listen 80;
     server_name www.elearning.com elearning.com;
@@ -31,5 +35,14 @@ server {
 
     location /media/ {
         alias /home/blessed/Workspace/Django/e_learning/media/;
+    }
+
+    location /ws/ {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade ;
+        proxy_set_header Connection "upgrade";
+        proxy_redirect off;
+
+        proxy_pass http://daphne;
     }
 }
