course detail subdomain

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -9,7 +9,7 @@ upstream daphne {
 
 server {
     listen 80;
-    server_name www.elearning.com elearning.com;
+    server_name *.elearning.com elearning.com;
     return 301 https://elearning.com$request_uri;
 }
 
@@ -19,7 +19,7 @@ server {
     ssl_certificate /home/blessed/Workspace/Django/e_learning/config/ssl/e_learning.crt;
     ssl_certificate_key /home/blessed/Workspace/Django/e_learning/config/ssl/e_learning.key;
 
-    server_name www.elearning.com elearning.com;
+    server_name *.elearning.com elearning.com;
 
     access_log /home/blessed/Workspace/Django/e_learning/config/logs/nginx_access.log;
     error_log /home/blessed/Workspace/Django/e_learning/config/logs/nginx_error.log;
