--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.7'
 
 services:
   db:
@@ -7,9 +7,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      - DJANGO_DB_USER
-      - DJANGO_DB_NAME
-      - DJANGO_DB_PASSWORD
+      DJANGO_DB_NAME: "${DJANGO_DB_NAME}"
+      DJANGO_DB_USER: "${DJANGO_DB_USER}"
+      DJANGO_DB_PASSWORD: "${DJANGO_DB_PASSWORD}"
   web:
     build: .
     restart: always
@@ -18,13 +18,13 @@ services:
     depends_on:
       - db 
     environment:
-      - DJANGO_SETTINGS_MODULE
-      - DJANGO_SECRET_KEY
-      - DJANGO_LOG_LEVEL
-      - DJANGO_LOG_FILE
-      - DJANGO_ALLOWED_HOSTS
-      - DJANGO_DB_NAME
-      - DJANGO_DB_USER
-      - DJANGO_DB_PASSWORD
-      - DJANGO_DB_HOST
-      - DJANGO_DB_PORT
+      DJANGO_SETTINGS_MODULE: "${DJANGO_SETTINGS_MODULE}"
+      DJANGO_SECRET_KEY: "${DJANGO_SECRET_KEY}"
+      DJANGO_LOG_LEVEL: "${DJANGO_LOG_LEVEL}"
+      DJANGO_LOG_FILE: "${DJANGO_LOG_FILE}"
+      DJANGO_ALLOWED_HOSTS: "${DJANGO_ALLOWED_HOSTS}"
+      DJANGO_DB_NAME: "${DJANGO_DB_NAME}"
+      DJANGO_DB_USER: "${DJANGO_DB_USER}"
+      DJANGO_DB_PORT: "${DJANGO_DB_PORT}"
+      DJANGO_DB_HOST: "${DJANGO_DB_HOST}"
+      DJANGO_DB_PASSWORD: "${DJANGO_DB_PASSWORD}"
