--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     volumes:
       - static_root:/elearning/static_root
       - media_root:/elearning/media_root
+    tty: true
 
 volumes:
   postgres_data:
